[package]
name = "boost_outcome"
description = "Boost C++ library boost_outcome packaged using Zanbil"
version = "0.1.0"
edition = "2024"
links = "boost_outcome"
license = "BSL-1.0"
repository = "https://github.com/zanbilify/boost_outcome"

[package.metadata.zanbil]
make_dependencies_public = true

[dependencies]
boost_assert = { version = "0.1.0", path = "../boost_assert" }
boost_config = { version = "0.1.0", path = "../boost_config" }
boost_exception = { version = "0.1.0", path = "../boost_exception" }
boost_system = { version = "0.1.0", path = "../boost_system" }
boost_throw_exception = { version = "0.1.0", path = "../boost_throw_exception" }

[build-dependencies]
zanbil-boost-build = "0.1.0"
